--- a/templates/base.html
+++ b/templates/base.html
@@ -411,9 +411,16 @@
 <body>
     <div id="header">
         <div class="header">
-            <a href="/">
-                <h1>JOEYSCAT</h1>
-            </a>
+
+            <div class="logo left">
+                <a href="/">
+                    Joeyscat
+                </a>
+            </div>
+            <div class="signpart right">
+                <!-- <a href="/search">Search</a> &nbsp; -->
+                <a href="/account">帐户</a>
+            </div>
         </div>
     </div>
 
