--- a/templates/base.html
+++ b/templates/base.html
@@ -122,6 +122,7 @@
             line-height: 30px;
             font-size: 14px;
             text-align: center;
+            padding: 20px;
         }
 
         .body-content {
@@ -429,7 +430,7 @@
     </div>
 
     <div class="footer">
-        Powerd by JoJo
+        Powerd by <a href="https://www.rust-lang.org/">Rust</a>
     </div>
 </body>
 
