--- a/templates/signin.html
+++ b/templates/signin.html
@@ -6,13 +6,17 @@
     <h3>
         登录
     </h3>
-    <form class="" action="/signin" method="post">
+    <!-- <form class="" action="/signin" method="post">
         <input type="text" class="input" name="username" placeholder="请输入账户名">
         <br>
         <input type="text" class="password" name="password" placeholder="请输入密码">
         <br>
         <br>
         <input type="submit" value="登录">
-    </form>
+    </form> -->
+
+    <a href="{{gitee_signin_uri}}">
+        <img src="https://gitee.com/static/images/logo_icon.png" alt="gitee-login" style="height: 32px;">
+    </a>
 </div>
 {% endblock content %}
