--- a/templates/base.html
+++ b/templates/base.html
@@ -430,7 +430,8 @@
     </div>
 
     <div class="footer">
-        Powerd by <a href="https://www.rust-lang.org/">Rust</a>
+        Powered by <a href="https://www.rust-lang.org/">Rust</a>
+        &nbsp;&&nbsp;<a href="https://github.com/poem-web/poem">Poem</a>
     </div>
 </body>
 
