feat: 显示用户名而不是ID

--- a/templates/account.html
+++ b/templates/account.html
@@ -4,7 +4,7 @@
 <div class="body-content">
     <h3>账户信息</h3>
     <div class="account_info">
-        当前账户: {{current_user}}
+        当前账户: {{username}}
         <br>
         <br>
         <br>
