--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                     <small class="tags">&nbsp;&nbsp;{{article.tags}}</small>
                 </span>
                 <span class="right info">
-                    <span class="author">{{article.author_id}}</span>
+                    <span class="author">{{article.author_name}}</span>
                     <span class="timestamp">{{article.created_time}}</span>
                 </span>
             </li>
