--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{{ title }}{% endblock %}</title>
-    <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/27766600?s=40&v=4" type="image/x-icon">
+    <link rel="shortcut icon" href="https://portrait.gitee.com/uploads/avatars/user/567/1702445_Joeyscat_1605410941.png!avatar30" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/assets/css/base.css">
 </head>
 
