--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -64,9 +64,12 @@ a {
 	color: #222;
 }
 
+pre {
+	padding: 10px;
+}
+ 
 pre, code {
-	background: #fbf1c7;
-	padding: 0;
+	background: #e9f7f0;
 	font-family: "Source Code Pro","Fira Code",Menlo,Monaco,Consolas,"DejaVu Sans Mono",Inconsolata,"Courier New",monospace;
 }
 
@@ -270,10 +273,6 @@ div.detail-body-wx {
 	font-size: 15px;
 	line-height: 20px;
 	color: #666;
-}
-
-.category-list-section {
-/*	padding-top: 25px;*/
 }
 
 .category-list-section ul li {
